[gd_scene load_steps=7 format=3 uid="uid://cuge8cytvl0vh"]

[ext_resource type="Script" path="res://Assets/Scenes/home_page.gd" id="1_ppya4"]
[ext_resource type="Script" path="res://Assets/Scenes/LevelMenu.gd" id="2_ipp4i"]
[ext_resource type="Script" path="res://Assets/Scenes/Credits.gd" id="3_7joe6"]
[ext_resource type="Texture2D" uid="uid://bjgv7v2y81nwm" path="res://Assets/Sprites/then-the-morning-comes.png" id="3_unbpj"]
[ext_resource type="AudioStream" uid="uid://drkbwvkv1ykyu" path="res://Assets/Sounds/sunlight3.mp3" id="5_bcsp4"]

[sub_resource type="Theme" id="Theme_qnbgd"]

[node name="HomePage" type="Node2D"]

[node name="MainMenu" type="CanvasLayer" parent="."]
script = ExtResource("1_ppya4")

[node name="ColorRect" type="ColorRect" parent="MainMenu"]
offset_right = 1188.0
offset_bottom = 675.0
color = Color(0, 0, 0, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="MainMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.5
offset_top = -137.625
offset_right = 169.5
offset_bottom = -73.625
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]Heat Rises"

[node name="RichTextLabel2" type="RichTextLabel" parent="MainMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.5
offset_top = -50.155
offset_right = 189.5
offset_bottom = 9.845
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]>New Game<"

[node name="RichTextLabel3" type="RichTextLabel" parent="MainMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.5
offset_top = -3.39999
offset_right = 187.5
offset_bottom = 59.6
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]Level Select"

[node name="RichTextLabel4" type="RichTextLabel" parent="MainMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = 44.455
offset_right = 201.0
offset_bottom = 108.455
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]Credits"

[node name="LevelMenu" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("2_ipp4i")

[node name="ColorRect" type="ColorRect" parent="LevelMenu"]
offset_right = 1188.0
offset_bottom = 675.0
color = Color(0, 0, 0, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="LevelMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.5
offset_top = -196.98
offset_right = 171.5
offset_bottom = -123.98
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 53
bbcode_enabled = true
text = "[center]Levels"
fit_content = true
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="LevelMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -97.0
offset_right = 218.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 44
bbcode_enabled = true
text = "[center]>Level 1<"
fit_content = true
scroll_active = false

[node name="RichTextLabel3" type="RichTextLabel" parent="LevelMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.5
offset_top = -32.68
offset_right = 217.5
offset_bottom = 40.3203
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 44
bbcode_enabled = true
text = "[center]Level 2"
fit_content = true
scroll_active = false

[node name="RichTextLabel4" type="RichTextLabel" parent="LevelMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.5
offset_top = 25.86
offset_right = 216.5
offset_bottom = 98.8602
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 44
bbcode_enabled = true
text = "[center]Level 3"
fit_content = true
scroll_active = false

[node name="RichTextLabel5" type="RichTextLabel" parent="LevelMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = 93.88
offset_right = 231.0
offset_bottom = 166.88
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 44
bbcode_enabled = true
text = "[center]Back"
fit_content = true
scroll_active = false

[node name="Credits" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("3_7joe6")

[node name="ColorRect" type="ColorRect" parent="Credits"]
offset_right = 1188.0
offset_bottom = 675.0
color = Color(0, 0, 0, 1)

[node name="Then-the-morning-comes" type="Sprite2D" parent="Credits"]
position = Vector2(1010, 321)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_unbpj")

[node name="RichTextLabel5" type="RichTextLabel" parent="Credits"]
offset_left = 98.0
offset_top = 59.0
offset_right = 877.0
offset_bottom = 617.0
theme = SubResource("Theme_qnbgd")
theme_override_font_sizes/normal_font_size = 31
bbcode_enabled = true
text = "[center]Heat Rises[/center]

Music/Level Design                                       Dragostego
Lead Artist                                                                 iStead
Programming/Level Design                               Peaches
Level Design                                        SalmonSleighRide

Special thanks to our playtesters:
HappyPhoenix
SkateBoardKnight

[center]>Back<"

[node name="SLplayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_bcsp4")
volume_db = -5.025
